# UFZ-MVGNN

./: .gitignore  LICENSE  README.md  activate_and_run.sh  demo.py  demo_llm_query.py  pyproject.toml  requirement.txt
configs/: base.yaml
docs/: GETTING_STARTED.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  LLM_FILES_CHECKLIST.md  LLM_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README_CN.md  RUN.md  START.md  STRUCTURE.md
scripts/: run_full_pipeline.py  run_full_pipeline.sh
tests/: __init__.py  test_analysis.py  test_config.py  test_models.py  test_semantic.py
ufz/: __main__.py  cli.py
ufz/analysis/: __init__.py  clustering.py  reducer.py
ufz/config/: parser.py
ufz/export/: __init__.py  checkpoint.py  graphrag.py  llm_interface.py  maps.py
ufz/features/: __init__.py  density.py  graphlet.py  manager.py  orientation.py  processing.py  registry.py  shape.py  size.py
ufz/graph/: __init__.py  builder.py
ufz/models/: __init__.py  losses.py  mvcl.py  tower.py
ufz/models/backbones/: __init__.py  base.py  gat.py  gcn.py  gin.py  registry.py
ufz/semantic/: __init__.py  idw.py  imputer.py  losses.py  refine_net.py  trainer.py
ufz/utils/: __init__.py  cache.py  logging.py  seed.py
ufz/visualization/: __init__.py  cluster_viz.py  embedding_viz.py  graph_viz.py
